[project]
name = "news-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dspy-ai>=3.1.3",
    "httpx>=0.28.1",
    "prefect>=3.6.20",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
news-kg = "news_kg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
